src/program/snapshots/quil_rs__program__graphviz_dot__tests__graph__parametric_pulse.snap
---
source: src/program/graphviz_dot.rs
expression: dot_format
---
digraph {
  entry -> "block_0_start";
  entry [label="Entry Point"];
  subgraph cluster_0 {
    label="block_0";
    node [style="filled"];
    "block_0_start" [shape=circle, label="start"];
    "block_0_start" -> "block_0_0" [label="frame"];
    "block_0_start" -> "block_0_1" [label="frame"];
    "block_0_start" -> "block_0_end" [label="frame
ordering"];
    "block_0_0" [shape=rectangle, label="[0] PULSE 0 \"rf\" test(a: param[0])"];
    "block_0_0" -> "block_0_1" [label="frame"];
    "block_0_0" -> "block_0_end" [label="await read
frame
ordering"];
    "block_0_1" [shape=rectangle, label="[1] CAPTURE 0 \"ro_rx\" test(a: param[0]) ro[0]"];
    "block_0_1" -> "block_0_end" [label="await capture
await read
frame
ordering"];
    "block_0_end" [shape=circle, label="end"];
  }
}

